Blender crashes in saving any file #43919

Closed
opened 2015-03-07 12:07:20 +01:00 by Paolo Furani · 44 comments

System Information
OS: lubuntu 14.10
CPU: Intel(R) Pentium(R) M processor 1.73GHz
Graphic card :Mobile 915GM/GMS/910GML Express Graphics Controller

Blender Version
Broken: Blender 2.73 (sub 9), Commit date: 2015-03-06 16:53, Hash cf1227d
Worked: (optional)

Short description of error
Hi, I have already reported this error here (https://developer.blender.org/T43892) but I do not think the same thing, in that they talk about the game engine. I hope not to be redundant.
I have tried to save in several mode the blender file and it don't save any Blender file.
With the previous version works very well. (2.73a)

This is the error that tells me the crash report.

Blender 2.73 (sub 9), Commit date: 2015-03-06 16:53, Hash cf1227d

backtrace

./blender(BLI_system_backtrace+0x30) [0x95892c0]
./blender() [0x8b5a91f]
./blender() [0x8b5ab08]
[0xb76f6c58]

Exact steps for others to reproduce the error
No special operations, does not save even the default cube.

**System Information** OS: lubuntu 14.10 CPU: Intel(R) Pentium(R) M processor 1.73GHz Graphic card :Mobile 915GM/GMS/910GML Express Graphics Controller **Blender Version** Broken: Blender 2.73 (sub 9), Commit date: 2015-03-06 16:53, Hash cf1227d Worked: (optional) **Short description of error** Hi, I have already reported this error here (https://developer.blender.org/T43892) but I do not think the same thing, in that they talk about the game engine. I hope not to be redundant. I have tried to save in several mode the blender file and it don't save any Blender file. With the previous version works very well. (2.73a) This is the error that tells me the crash report. # Blender 2.73 (sub 9), Commit date: 2015-03-06 16:53, Hash cf1227d # backtrace ./blender(BLI_system_backtrace+0x30) [0x95892c0] ./blender() [0x8b5a91f] ./blender() [0x8b5ab08] [0xb76f6c58] **Exact steps for others to reproduce the error** No special operations, does not save even the default cube.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @pafurijaz-4

Added subscriber: @pafurijaz-4

#43944 was marked as duplicate of this issue

#43944 was marked as duplicate of this issue

#43892 was marked as duplicate of this issue

#43892 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

you are using a very old crappy GPU here… Can you please:

  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • Try to tweak OGL settings in UserPreferences, System tab.
  • Attach here the report generated by Help -> System Info.
  • Try to start in software OpenGL mode (use the blender-softwaregl distributed with official blender, will be slow, but will show whether this is a driver issue or not)?
you are using a **very old** crappy GPU here… Can you please: * Try to start Blender in factory settings (`--factory-startup` commandline option) (this will ensure whether this is a userpref or addon issue or not). * Try to tweak OGL settings in UserPreferences, System tab. * Attach here the report generated by Help -> System Info. * Try to start in software OpenGL mode (use the `blender-softwaregl` distributed with official blender, will be slow, but will show whether this is a driver issue or not)?
Author

@mont29
Hi I did as you said, but I always get the same mistakes, I remind you that the old version of Blender has no problems. I'm using is an old cpu but just to make small models, when I really require more power use another pc. but like to have blender on all my workstations.

Try to start Blender in factory settings (--factory-startup commandline option)

Blender 2.73 (sub 9), Unknown revision

backtrace

./blender(BLI_system_backtrace+0x37) [0x8d66887]
./blender() [0x84406a8]
[0xb7716c58]

Try to start in software OpenGL mode (use the blender-softwaregl

Blender 2.73 (sub 9), Unknown revision

backtrace

./blender(BLI_system_backtrace+0x37) [0x8d66887]
./blender() [0x84406a8]
[0xb7766c58]

@mont29 Hi I did as you said, but I always get the same mistakes, I remind you that the old version of Blender has no problems. I'm using is an old cpu but just to make small models, when I really require more power use another pc. but like to have blender on all my workstations. **Try to start Blender in factory settings (--factory-startup commandline option)** # Blender 2.73 (sub 9), Unknown revision # backtrace ./blender(BLI_system_backtrace+0x37) [0x8d66887] ./blender() [0x84406a8] [0xb7716c58] **Try to start in software OpenGL mode (use the blender-softwaregl** # Blender 2.73 (sub 9), Unknown revision # backtrace ./blender(BLI_system_backtrace+0x37) [0x8d66887] ./blender() [0x84406a8] [0xb7766c58]

I gave you two more things to check:

  • Try to tweak OGL settings in UserPreferences, System tab.
  • Attach here the report generated by Help -> System Info.
I gave you two more things to check: > * Try to tweak OGL settings in UserPreferences, System tab. > * Attach here the report generated by Help -> System Info.
Author

So, I tried to do some fine-tuning in the preferences OpenGL, I also tried to turn off everything that was possible, but still does not save.
system-info.txt

So, I tried to do some fine-tuning in the preferences OpenGL, I also tried to turn off everything that was possible, but still does not save. [system-info.txt](https://archive.blender.org/developer/F147933/system-info.txt)
Author

This is the system-info.txt that of the old version 2.73a. and it working well.
system-info-Blender_2.73a.txt

This is the system-info.txt that of the old version 2.73a. and it working well. [system-info-Blender_2.73a.txt](https://archive.blender.org/developer/F147934/system-info-Blender_2.73a.txt)
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@pafurijaz-4, so you tested using --factory-startup and the blender-softwaregl and it still crashes in both cases? Please double check as this is pretty important information for us.

@pafurijaz-4, so you tested using `--factory-startup` and the `blender-softwaregl` and it still crashes in both cases? Please double check as this is pretty important information for us.
Author

@JulianEisel
Yes i have tested all the advice, even the last ones, as you say, and it still crashes in both cases. But the old version I not have problem.

@JulianEisel Yes i have tested all the advice, even the last ones, as you say, and it still crashes in both cases. But the old version I not have problem.
Added subscribers: @JohnRoper, @dr.sybren, @Moguri, @JorgeBernalMartinez

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Could you try disable: Userprefs -> File -> Save Preview Images

And see if this resolves the problem?

Could you try disable: *Userprefs -> File -> Save Preview Images* And see if this resolves the problem?
Author

@ideasman42 Great man, yes, yes now work the saving files after disabling the preview image file.

@ideasman42 Great man, yes, yes now work the saving files after disabling the preview image file.

@pafurijaz-4, then we just need to know where it crashes.

If the image fails to be created - this is checked for already in the code.

So either...

  • OpenGL fails in the middle of offscreen buffer creation and we miss error checking.
  • The driver is crashing.
@pafurijaz-4, then we just need to know where it crashes. If the image fails to be created - this is checked for already in the code. So either... - OpenGL fails in the middle of offscreen buffer creation and we miss error checking. - The driver is crashing.

@pafurijaz-4 Could you please attach here the file crashing on save?

Could also be an issue with some kind of invalid/corrupted ID preview data…

@pafurijaz-4 Could you please attach here the file crashing on save? Could also be an issue with some kind of invalid/corrupted ID preview data…

Since this happens with factory settings, think this may be caused by writing the OpenGL preview thumbnail for the blend file its self.

Since this happens with factory settings, think this may be caused by writing the OpenGL preview thumbnail for the blend file its self.
Author

@ideasman42 I don't understand what you mean, but I can say what happening, when I push button save or shortcut CRTL+W Blender immediately crashes.

@mont29 Blender does not create the output file and if I try to save the default cube it can't save and crashes instantly.

@ideasman42 I don't understand what you mean, but I can say what happening, when I push button save or shortcut CRTL+W Blender immediately crashes. @mont29 Blender does not create the output file and if I try to save the default cube it can't save and crashes instantly.

Oh, so this happens on any kind of file saving… :/

What bothers me is that, if it was an OpenGL issue, using software OGL should 'fix' it, and yet you reported it did not change anything…

Can you build blender yourself, by any chance?

Oh, so this happens on any kind of file saving… :/ What bothers me is that, if it was an OpenGL issue, using software OGL should 'fix' it, and yet you reported it did not change anything… Can you build blender yourself, by any chance?
Author

@mont29 Yes i can build Blender by myself, and yes the crash happening in both cases software or not OGL

@mont29 Yes i can build Blender by myself, and yes the crash happening in both cases software or not OGL
Member

I have the same problem, and like everyone else, I can't see what the problem is. I just went back to Blender 2.73 to do my work because I do not have the time to be playing around with a broken feature.

I have the same problem, and like everyone else, I can't see what the problem is. I just went back to Blender 2.73 to do my work because I do not have the time to be playing around with a broken feature.
Member

It is the same for BI, Cycles, and the BGE

It is the same for BI, Cycles, and the BGE

@JohnRoper, this is not a broken feature for many users apparently.

Can you post your OS-version & graphics card model?

Also can you confirm that disabling Thumbnails fixes the problem?: Userprefs -> File -> Save Preview Images

@JohnRoper, this is not a broken feature for many users apparently. Can you post your OS-version & graphics card model? Also can you confirm that disabling Thumbnails fixes the problem?: *Userprefs -> File -> Save Preview Images*

@pafurijaz-4 Cool, then can you build a Debug version of current master, run it with GDB, and attach here the backtrace of the crash?

  gdb path/to/blender
  (gdb) run
  <make blender crash>
  (gdb) bt
@pafurijaz-4 Cool, then can you build a Debug version of current master, run it with GDB, and attach here the backtrace of the crash? ``` gdb path/to/blender (gdb) run <make blender crash> (gdb) bt
Author

@mont29 I'm still trying to find the ccmake file where i do the change but i'm not able to find it. I apologize but can you help me please.

Where I is needed put this string CMake, set CMAKE_BUILD_TYPE=Debug

@mont29 I'm still trying to find the ccmake file where i do the change but i'm not able to find it. I apologize but can you help me please. Where I is needed put this string CMake, set CMAKE_BUILD_TYPE=Debug

@pafurijaz-4 either pass -D CMAKE_BUILD_TYPE=Debug to cmake itself, or edit /path/to/build_linux/CMakeCache.txt and change it there. I usually do the latter. Then run make again to build everything.

@pafurijaz-4 either pass `-D CMAKE_BUILD_TYPE=Debug` to cmake itself, or edit `/path/to/build_linux/CMakeCache.txt` and change it there. I usually do the latter. Then run `make` again to build everything.
Member

My OS is OSX 10.6.8 (it needs updating) and I have an Intel Graphics card. I am not sure which one it is because the computer is a 2006 MacBook.

My OS is OSX 10.6.8 (it needs updating) and I have an Intel Graphics card. I am not sure which one it is because the computer is a 2006 MacBook.
Member

Added subscriber: @NastosLabros

Added subscriber: @NastosLabros
Author

Ok boys after the hell of compiling Blender in debug mode and installing gdb to get the output I hope this text below can help you.

GNU gdb (Ubuntu 7.8-1ubuntu4) 7.8.0.20141001-cvs
Copyright (C) 2014 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "i686-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from ./blender...(no debugging symbols found)...done.
(gdb) run
Starting program: /home/pafurijaz/blender-git/build_linux/bin/blender 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[New Thread 0xb4a4fb40 (LWP 31475)]
Color management: using fallback mode for management
Read new prefs: /home/pafurijaz/.config/blender/2.73/config/userpref.blend
[New Thread 0xb3c64b40 (LWP 31476)]
AL lib: (WW) alc_initconfig: Failed to initialize backend "pulse"
[Thread 0xb3c64b40 (LWP 31476) exited]
AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 48000hz instead
[New Thread 0xb3209b40 (LWP 31478)]
[New Thread 0xb3c64b40 (LWP 31479)]
[Thread 0xb3c64b40 (LWP 31479) exited]
found bundled python: /home/pafurijaz/blender-git/build_linux/bin/2.73/python

Program received signal SIGSEGV, Segmentation fault.
0x00000000 in ?? ()
(gdb) bt
- 0  0x00000000 in ?? ()
- 1  0x08cc9e4c in GPU_framebuffer_slots_bind ()
- 2  0x08cca460 in GPU_offscreen_bind ()
- 3  0x0850b844 in ED_view3d_draw_offscreen_imbuf ()
- 4  0x0850bc39 in ED_view3d_draw_offscreen_imbuf_simple ()
- 5  0x0844d021 in blend_file_thumb ()
- 6  0x0844e029 in wm_file_write ()
- 7  0x0845831e in wm_save_as_mainfile_exec ()
- 8  0x0844981f in wm_handler_fileselect_do ()
- 9  0x0844a98b in wm_handlers_do_intern ()
- 10 0x0844a9ff in wm_handlers_do ()
- 11 0x0844acef in wm_event_do_handlers ()
- 12 0x08442c49 in WM_main ()
- 13 0x0842f5d1 in main ()
(gdb) 
Ok boys after the hell of compiling Blender in debug mode and installing gdb to get the output I hope this text below can help you. ``` GNU gdb (Ubuntu 7.8-1ubuntu4) 7.8.0.20141001-cvs Copyright (C) 2014 Free Software Foundation, Inc. License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html> This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law. Type "show copying" and "show warranty" for details. This GDB was configured as "i686-linux-gnu". Type "show configuration" for configuration details. For bug reporting instructions, please see: <http://www.gnu.org/software/gdb/bugs/>. Find the GDB manual and other documentation resources online at: <http://www.gnu.org/software/gdb/documentation/>. For help, type "help". Type "apropos word" to search for commands related to "word"... Reading symbols from ./blender...(no debugging symbols found)...done. (gdb) run Starting program: /home/pafurijaz/blender-git/build_linux/bin/blender [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1". [New Thread 0xb4a4fb40 (LWP 31475)] Color management: using fallback mode for management Read new prefs: /home/pafurijaz/.config/blender/2.73/config/userpref.blend [New Thread 0xb3c64b40 (LWP 31476)] AL lib: (WW) alc_initconfig: Failed to initialize backend "pulse" [Thread 0xb3c64b40 (LWP 31476) exited] AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 48000hz instead [New Thread 0xb3209b40 (LWP 31478)] [New Thread 0xb3c64b40 (LWP 31479)] [Thread 0xb3c64b40 (LWP 31479) exited] found bundled python: /home/pafurijaz/blender-git/build_linux/bin/2.73/python Program received signal SIGSEGV, Segmentation fault. 0x00000000 in ?? () (gdb) bt - 0 0x00000000 in ?? () - 1 0x08cc9e4c in GPU_framebuffer_slots_bind () - 2 0x08cca460 in GPU_offscreen_bind () - 3 0x0850b844 in ED_view3d_draw_offscreen_imbuf () - 4 0x0850bc39 in ED_view3d_draw_offscreen_imbuf_simple () - 5 0x0844d021 in blend_file_thumb () - 6 0x0844e029 in wm_file_write () - 7 0x0845831e in wm_save_as_mainfile_exec () - 8 0x0844981f in wm_handler_fileselect_do () - 9 0x0844a98b in wm_handlers_do_intern () - 10 0x0844a9ff in wm_handlers_do () - 11 0x0844acef in wm_event_do_handlers () - 12 0x08442c49 in WM_main () - 13 0x0842f5d1 in main () (gdb) ```

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Hmm, a NULL pointer usage in GPU_framebuffer_slots_bind(), Antony might be interested too.

Yet, are you sure you used a Debug build to get this backtrace? It should have given us the exact point in code where issue happens, in this case… ;/

Hmm, a NULL pointer usage in `GPU_framebuffer_slots_bind()`, Antony might be interested too. Yet, are you sure you used a Debug build to get this backtrace? It should have given us the exact point in code where issue happens, in this case… ;/
Author

Ok I'm not sure if I done the correct passages, this is what i done.
Because I deleted the folder and the file build_linux CMakeCache.txt is located in that folder.
I compiled blender first, with command make only, and after I changed the value on text file CMakeCache.txt to

//No help, variable specified on the command line.
CMAKE_BUILD_TYPE:STRING=Debug

and then I recompiled blender

I tried to do make passing the argument -D CMAKE_BUILD_TYPE = Debug but something may be wrong and does not work.

Ok I'm not sure if I done the correct passages, this is what i done. Because I deleted the folder and the file build_linux CMakeCache.txt is located in that folder. I compiled blender first, with command make only, and after I changed the value on text file CMakeCache.txt to ``` //No help, variable specified on the command line. CMAKE_BUILD_TYPE:STRING=Debug ``` and then I recompiled blender I tried to do make passing the argument -D CMAKE_BUILD_TYPE = Debug but something may be wrong and does not work.

This issue was referenced by e2471ea96a

This issue was referenced by e2471ea96adcd4f0b183f684c19833258dd69b2d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e2471ea96a.

Closed by commit e2471ea96a.

Just pushed a possible fix, can you try a build from buildbot tomorrow?

At some point we are going to deprecate such GPUs though, probably within the next year.

Just pushed a possible fix, can you try a build from buildbot tomorrow? At some point we are going to deprecate such GPUs though, probably within the next year.
Author

@Psy-Fi Ok tomorrow, I try the new version from buildbot. thanks.
But if you have already updated the file i can build it by myself with updating of my blender-git

@Psy-Fi Ok tomorrow, I try the new version from buildbot. thanks. But if you have already updated the file i can build it by myself with updating of my blender-git

Yep, you can try it even now

Yep, you can try it even now
Author

Ok I try now and I tell what happening after.

Ok I try now and I tell what happening after.
Author

@Psy-Fi Thanks, now saves files without problems

@Psy-Fi Thanks, now saves files without problems
Member

It works for me too

It works for me too
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43919
No description provided.