Attempt to fix T43919, avoid using GPU_framebuffer_slots_bind just in case a system does not support drawing to many framebuffers.